crates/codegen/language/tests/src/fail/references/unknown_reference/test.stderr
error: Reference to unknown item 'Unknown'.
  --> src/fail/references/unknown_reference/test.rs:16:75
   |
16 |                     fields = (field_1 = Required(Baz), field_2 = Required(Unknown))
   |                                                                           ^^^^^^^
